[project]
name = "imaginAIry"
version = "14.0.0b1"
description = "AI imagined images. Pythonic generation of images."
authors = [
    { name = "Bryce Drennan", email = "" }
]
dependencies = [
    "Pillow>=9.1.0",
    "click>=8.0.0",
    "click-help-colors>=0.9.1",
    "click-shell>=2.0",
    "diffusers>=0.3.0",
    "einops>=0.3.0",
    "facexlib>=0.2.1.1",
    "fairscale>=0.4.4",
    "fastapi>=0.70.0",
    "ftfy>=6.0.1",
    "imageio>=2.9.0",
    "kornia>=0.6",
    "numpy>=1.19.0, <1.26.0",
    "omegaconf>=2.1.1",
    "open-clip-torch>=2.0.0",
    "opencv-python>=4.4.0.46",
    "protobuf!=3.20.2, !=3.19.5",
    "psutil>5.7.3",
    "pydantic>=2.3.0",
    "pytorch-lightning>=1.4.2, <2.0.0",
    "refiners>=0.2.0",
    "requests>=2.28.1",
    "safetensors>=0.2.1",
    "scipy<1.11",
    "timm>=0.4.12, !=0.9.0, !=0.9.1",
    "torchdiffeq>=0.2.0",
    "torchmetrics>=0.6.0",
    "torchvision>=0.13.1",
    "tqdm>=4.64.0",
    "transformers>=4.19.2",
    "uvicorn>=0.16.0",
    "xformers>=0.0.16 ; sys_platform != 'darwin' and platform_machine != 'aarch64'",
]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
